# cod3s-raichu

./: .gitignore  Cargo.toml  LICENSE  README.md  mkdocs.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benchmarks/models/: README.md  heated_room_s3.json  heaters_s1.json  pure_exp.json
benchmarks/pycatshoo-cpp/: .gitignore  Makefile  README.md  bench.cpp  bench_py.py  parity_experiment.py  parity_results.json  results.json  run_bench.py
bindings/pyraichu/: Cargo.toml  README.md  pyproject.toml
bindings/pyraichu/python/pyraichu/: __init__.py  _pyraichu.pyi  journal.py  muscadet.py
bindings/pyraichu/python/pyraichu/importers/: __init__.py  cod3s_platform.py
bindings/pyraichu/python/pyraichu/plugins/: __init__.py  muscadet.py
bindings/pyraichu/src/: lib.rs
crates/raichu/: Cargo.toml
crates/raichu-core/: Cargo.toml
crates/raichu-core/benches/: engine.rs
crates/raichu-core/src/: compile.rs  engine.rs  lib.rs  sequence.rs
crates/raichu-core/tests/: engine.rs  interactive.rs  sequences.rs  stochastic_inst.rs
crates/raichu-expr/: Cargo.toml
crates/raichu-expr/src/: lib.rs
crates/raichu-io/: Cargo.toml
crates/raichu-io/src/: lib.rs
crates/raichu-model/: Cargo.toml
crates/raichu-model/src/: lib.rs  tests.rs
crates/raichu-montecarlo/: Cargo.toml
crates/raichu-montecarlo/src/: lib.rs
crates/raichu-montecarlo/tests/: laws.rs  mc.rs
crates/raichu-numeric/: Cargo.toml
crates/raichu-numeric/src/: lib.rs
crates/raichu-rng/: Cargo.toml
crates/raichu-rng/src/: lib.rs
crates/raichu/src/: lib.rs
docs/: index.md
docs/benchmarks/: accuracy-cost-parity.md  cross-validation.md  performance.md
docs/guides/: causal-journal.md  muscadet-and-plugins.md  numerical-tuning.md  parallelism.md  platform-import.md  reproducibility.md  sequence-analysis.md
docs/pycatshoo/: concept-mapping.md  migration-guide.md
docs/reference/: model-schema.md
docs/tutorial/: 01-first-model.md  02-connecting-components.md  03-stochastic-and-monte-carlo.md  04-going-hybrid.md
python/tests/docs/: test_doc_examples.py
