[package]
name = "pyraichu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Python binding for the RAICHU hybrid (PDMP) simulation engine"

[lib]
name = "_pyraichu"
crate-type = ["cdylib"]

[dependencies]
raichu.workspace = true
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
