[package]
name = "raichu-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Model (de)serialization and cod3s-dump converter (interop layer)"

[dependencies]

[lints]
workspace = true
