[package]
name = "raichu-model"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "RAICHU native DSHA formalism: components, variables, ports, interfaces, automata, transitions"

[dependencies]
raichu-expr.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
