[package]
name = "raichu-rng"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reproducible RNG seeding and substream policy (master seed, per-replica ChaCha8 streams)"

[dependencies]
rand.workspace = true
rand_chacha.workspace = true

[lints]
workspace = true
