[package]
name = "raichu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
raichu-model.workspace = true
raichu-expr.workspace = true
raichu-rng.workspace = true
raichu-core.workspace = true
raichu-io.workspace = true
raichu-montecarlo.workspace = true
raichu-numeric.workspace = true

[lints]
workspace = true
